argocd/apps/services/manifests/jeopardy-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "jeopardy.aryat.io"
    external-dns.alpha.kubernetes.io/target: "dynamic.aryat.io"
  name: jeopardy-app
  namespace: jeopardy-app
spec:
  ports:
  - name: jeopardy-app
    port: 3000
    targetPort: jeopardy-app
  selector:
    app: jeopardy-app
